# Momo_Bartender

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml
Software/ai/: README.md  __init__.py  check_runtime.py  common.py  download_models.py  emotion_cli.py  momotender_service.py  setup_ai_env.sh  stt_cli.py  tts_cli.py  verify_stack.py
Software/fastapi/: README.md  app.py
Software/fastapi/static/: index.html
Software/hmi/: main_window.py
configs/: arm2_sts3215.example.json  arm7_sts3215.example.json  joint12_test.json
docs/: 1.txt
models/arm2/: CMakeLists.txt  package.xml
models/arm2/config/: joint_limits.json
models/arm2/launch/: display.launch  gazebo.launch
models/arm2/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL
models/arm2/urdf/: arm2.urdf
recordings/: arm7_take1.json  begin.json  daojiu1.json  daojiu22.json  daojiu33.json  end.json  home.json  joint12_take1.json  joint23_interpolation_override.json  latest_trajectory.json  shake1.json
scripts/: 0_motor_read_registers.py  0_motor_set_id.py  0_robot_get_state.py  0_robot_ping.py  0_robot_set_zero.py  0_urdf_apply_calibration.py  0_urdf_limit_calibrate.py  1_joint_12_smoke_test.py  1_joint_mode0_smoke_test.py  1_joint_move.py  2_playback_trajectory.py  2_record_interpolation_override.py  2_record_trajectory.py  3_shake_demo.py  _robot_script_common.py  edit_urdf_limits_pybullet.py  setup_momo_env.sh  update_urdf_limits.py
src/physical_agent/: __init__.py  cli.py  config.py  controller.py  gui.py  kinematics.py  lerobot_compat.py
(+5 files in other folders)
