[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physical-agent"
version = "0.1.0"
description = "Minimal STS3215 arm control package built on LeRobot's Feetech bus."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lerobot[feetech]>=0.5,<0.6",
    "numpy>=2.0,<2.3",
]

[project.optional-dependencies]
gui = [
    "PyQt5>=5.15,<5.16",
]
api = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
]

[project.scripts]
physical-agent = "physical_agent.cli:main"
physical-agent-gui = "physical_agent.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
