<package format="2">
  <name>arm2</name>
  <version>1.0.0</version>
  <description>URDF description package for arm2.</description>
  <author>TODO</author>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>robot_state_publisher</depend>
  <depend>roslaunch</depend>
  <depend>rostopic</depend>
  <depend>rviz</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <export>
    <architecture_independent />
  </export>
</package>
